# event-ticketing-system

./: .gitignore  README.md  Untitled Diagram.drawio  class.drawio
analitics-microservice/: Cargo.toml
analitics-microservice/migrations/: 20240701141018_daily-ticket.sql
analitics-microservice/src/: main.rs
api-gateaway/: api_gateaway.py
events-microservice/: Cargo.toml
events-microservice/.sqlx/: query-1fc4e56bdafd9c6aacd044fe800912396d787db4b494aa1e773328f923fbe3f1.json  query-a834ff7517dedd2028e05e1ff1fd9969701152ec4d360643b17596cbf15460f1.json
events-microservice/migrations/: 20240615122906_create_events_table.sql  20240615134648_fix_events_table.sql  20240627154827_events-extended.sql  20240627161048_event-extended-fix.sql  20240630192043_ticket.sql  20240630192645_ticket-fix.sql  20240630193910_tickets-fix2.sql
events-microservice/src/: main.rs
events-microservice/src/models/: event.rs  mod.rs  ticket.rs
events-microservice/src/routes/: config.rs  events_controller.rs  mod.rs
front/: package-lock.json  package.json
front/src/: App.js
image-microservice/: app.py
review-microservice/: Cargo.toml
review-microservice/migrations/: 20240617143835_review-table.sql
review-microservice/src/: main.rs
review-microservice/src/models/: review.rs
review-microservice/src/routes/: config.rs  mod.rs  review_controller.rs
search-microservice/: Cargo.toml
search-microservice/migrations/: 20240624111939_events-migration-fix.sql  20240627161000_event-extended-fix.sql
search-microservice/src/: main.rs
user-microservice/: app.py  config.py  create_table.py  requirements.txt  user_database.db
user-microservice/controllers/: user_controller.py
(+44 files in other folders)
