[package]
name = "events-microservice"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4"
chrono = "0.4.38"
serde = { version = "1.0.203", features = ["derive"] }
sqlx = "0.7.4"
uuid = "1.8.0"
