[package]
name = "events-microservice"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4"
chrono = { version = "0.4.38", features = ["serde"] }
dotenv = "0.15.0"
postgres = "0.19.7"
serde = { version = "1.0.203", features = ["derive"] }
serde_json = "1.0.117"
sqlx = { version = "0.7.4", features = ["runtime-async-std-native-tls", "postgres", "chrono", "uuid"] }
uuid = { version = "1.8.0", features = ["serde", "v4"] }
lapin = "2.3.4"
tokio-amqp = "2.0.0"
futures-lite = "2.3.0"
sanitize-filename = "0.5"
futures-util = "0.3"
actix-multipart = "0.6.2"
